@@ -1,4 +1,5 @@
 (trunk):
+* expose trust anchor when authenticating the certificate (requires x509 >= 0.2)
 * information about the active session is exposed via epoch : state -> epoch
 * by default only perfect-forward secrecy ciphersuites are used
    (configuration can be altered by ~ciphers:Config.supported_ciphers)
